<resources>
    <string name="app_name">LedClone</string>
    <string name="app_v">Version 1.03B</string>
    <string name="delete">DEL</string>
    <string name="action_settings">Setting</string>
    <string name="progress_title">Processing</string>
    <string name="send_c">Send completed</string>
    <string name="exit">Quit</string>
    <string name="item_bitmap">Image</string>
    <string name="item_text">Text</string>
    <string name="buttom_menu_kz">Control</string>
    <string name="buttom_menu_yy">Language</string>
    <string name="buttom_menu_ld">Brightness</string>
    <string name="buttom_menu_xs">Pixels</string>
    <string name="buttom_menu_xz">Logo</string>
    <string name="buttom_menu_ss">Send</string>
    <string name="kz_load">Load</string>
    <string name="kz_save">Save</string>
    <string name="kz_pswd">Password</string>
    <string name="buttom_menu_setLD">Set brightness</string>
    <string name="buttom_menu_setJM">Select message</string>
    <string name="item_text_flag_on">Image</string>
    <string name="item_text_flag_off">Text</string>
    <string name="item_text_btn_off">Fonts</string>
    <string name="item_text_btn_on">select</string>
    <string name="item_text_btn_cfg">Parameters</string>
    <string name="item_text_dialog_cfg">Set Parameters</string>
    <string name="item_text_dialog_cfg_time">Time</string>
    <string name="item_text_dialog_cfg_action">Action</string>
    <string name="item_text_dialog_cfg_effect">Effect</string>
    <string name="item_text_dialog_cfg_ss">Flash</string>
    <string name="item_text_dialog_cfg_boder">Border</string>
    <string name="item_text_dialog_cfg_qr">Insert</string>
    <string name="item_text_dialog_cfg_open">Open</string>
    <string name="item_text_dialog_cfg_close">Close</string>
    <string name="input_file">Select preference</string>
    <string name="input_password">Input new password (4 numbers)</string>
    <string name="bluetooth_device">Select bluetooth</string>
    <string name="bluetooth_dialog_ypd">Select partnered bluetooth</string>
    <string name="bluetooth_dialog_new">New partner bluetooth</string>
    <string name="input_file_name">Input the preference\'name</string>
    <string name="kz_jm">message</string>
    <string name="kz_ld">Brightness</string>
    <string name="kz_xs">Timing</string>
    <string name="pix_12">12 PX</string>
    <string name="pix_16">16 PX</string>
    <string name="brig_1">Brightness 1</string>
    <string name="brig_2">Brightness 2</string>
    <string name="brig_3">Brightness 3</string>
    <string name="brig_4">Brightness 4</string>
    <string name="brig_5">Brightness 5</string>
    <string name="log_title">Edit LOGO</string>
    <string name="logo_flag_btn1">Image</string>
    <string name="logo_flag_btn0">Text</string>
    <string name="textcfg_text">content:</string>
    <string name="textcfg_qianru_title">Select insert content</string>
    <string name="textcfg_title">Edit fonts style</string>
    <string name="textcfg_font">Font:</string>
    <string name="textcfg_fontSize">Size:</string>
    <string name="textcfg_fontStyle">Style:</string>
    <string name="textcfg_font_btntext">Select font file</string>
    <string name="textcfg_fontStyle0">Normal</string>
    <string name="textcfg_fontStyle1">Thick</string>
    <string name="textcfg_fontStyle2">Italic</string>
    <string name="textcfg_fontStyle3">Thick and italic</string>
    <string name="btn_Ok">Confirm</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="communication_succeeded">Send data successfully</string>
    <string name="communication_failed">Communicate failed</string>
    <string name="connect_failed">Bluetooth Link failed</string>
    <string name="connect_timeout">Bluetooth Link out of time</string>
    <string name="logo_invalid">Select Logo, but there is no data！</string>
    <string name="input_invalid">inputting data is null</string>
    <string name="socket_invalid">Create link failed</string>
    <string name="select_invalid">You have select nothing</string>
    <string name="js_0">All</string>
    <string name="js_1">Message1</string>
    <string name="js_2">Message2</string>
    <string name="js_3">Message3</string>
    <string name="js_4">Message4</string>
    <string name="js_5">Message5</string>
    <string name="js_6">Message6</string>
    <string name="js_7">Message7</string>
    <string name="js_8">Message8</string>
    <string name="textcfg_fontSize16">size 16</string>
    <string name="textcfg_fontSize15">size 15</string>
    <string name="textcfg_fontSize14">size 14</string>
    <string name="textcfg_fontSize13">size 13</string>
    <string name="textcfg_fontSize12">size 12</string>
    <string name="textcfg_fontSize8">size 8</string>
    <string name="notify_password_length">Password should be 4 numbers.</string>
    <string name="pref_not_found">Preferences file not found.</string>
    <string name="invalid_pref_name">Invalid preference file name.</string>
</resources>