<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#ffffff" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_text"/>
        <EditText android:id="@+id/editContext" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_font"/>
        <Button android:id="@+id/btn_font" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_font_btntext"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_fontSize"/>
        <RadioGroup android:orientation="horizontal" android:id="@+id/textFontSize" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioButton android:id="@+id/textFontSize16" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/textcfg_fontSize16"/>
            <RadioButton android:id="@+id/textFontSize12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_fontSize12"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_fontStyle"/>
        <Spinner android:id="@+id/textFontStyle" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/btn_Ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_Ok"/>
        <Button android:id="@+id/btn_Cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_Cancel"/>
    </LinearLayout>
</LinearLayout>
