<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ToggleButton android:id="@+id/logo_flag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/item_text_flag_on" android:textOff="@string/item_text_flag_off"/>
        <EditText android:id="@+id/context" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="9"/>
        <Button android:textSize="12dp" android:id="@+id/btn_fontOrimage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/item_text_btn_off" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp">
        <Button android:textSize="12dp" android:id="@+id/btn_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_Ok"/>
        <Button android:textSize="12dp" android:id="@+id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/btn_Cancel"/>
    </LinearLayout>
</LinearLayout>
