<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#ffffff" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:baselineAligned="false">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_font"/>
        <Button android:id="@+id/btn_font" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_font_btntext"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_fontSize"/>
        <Spinner android:id="@+id/textFontSize" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/textcfg_fontStyle"/>
        <Spinner android:id="@+id/textFontStyle" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:gravity="bottom|center_vertical|center_horizontal|center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="30sp" android:id="@+id/btn_Ok" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/btn_Ok" android:layout_weight="1"/>
        <Button android:textSize="30sp" android:id="@+id/btn_Cancel" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/btn_Cancel" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
