<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:background="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/kz_ld"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="18sp" android:textColor="#9c9c9c" android:gravity="center" android:id="@+id/brig_1" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/brig_1"/>
            <View android:background="#eeeeee" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="3dp" android:layout_marginBottom="3dp"/>
            <Button android:textSize="18sp" android:textColor="#9c9c9c" android:gravity="center" android:id="@+id/brig_2" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/brig_2"/>
            <View android:background="#eeeeee" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="3dp" android:layout_marginBottom="3dp"/>
            <Button android:textSize="18sp" android:textColor="#9c9c9c" android:gravity="center" android:id="@+id/brig_3" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/brig_3"/>
            <View android:background="#eeeeee" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="3dp" android:layout_marginBottom="3dp"/>
            <Button android:textSize="18sp" android:textColor="#9c9c9c" android:gravity="center" android:id="@+id/brig_4" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/brig_4"/>
            <View android:background="#eeeeee" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="3dp" android:layout_marginBottom="3dp"/>
            <Button android:textSize="18sp" android:textColor="#9c9c9c" android:gravity="center" android:id="@+id/brig_5" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/brig_5"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
